[project]
name = "grumots"
version = "0.1.0"
description = ""
authors = [{ name = "Malo Kerrand", email = "malo.kerrand@free.fr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.193.0,<3.0.0",
    "google-auth-httplib2>=0.3.0,<0.4.0",
    "google-auth-oauthlib>=1.3.0,<2.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
